@@ -34,9 +34,9 @@
    2. Click the + icon and select Application to create a new application configuration.
    3. Name the configuration appropriately, e.g., "Run Main". 
    4. Set the Main class to `Main`. You can use the class search feature (magnifying glass icon) to locate it.
-   5. Add `--enable-native-access=ALL-UNNAMED ` to the JVM options. (You can get VM options by clicking on the Modify options button.)
+   5. Add `--Djava.security.manager=allow --enable-native-access=ALL-UNNAMED` to the JVM options. (You can get VM options by clicking on the Modify options button.)
    6. In the Program arguments field, specify the path to the table, for example: 
-   `/Users/oussama.saoudi/pyspark_playground/test_2000_large_commits`
+   `/Users/oussama.saoudi/pyspark_playground/test_2000_commits`
      
 
 6) **Run** the application using the run configuration you created by clicking the Run button or selecting `Run | Run 'Run Main'`.
